examples/test/testpolicy15922.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15922
  namespace: namespace131
spec:
  podSelector:
    matchLabels:
      key48: value18
      key43: value10
      key27: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value46
          key41: value13
          key26: value18
      podSelector:
        matchLabels:
          key14: value47
